[package]
name = "cs_244b_project"
version = "0.0.1"
authors = ["Michaela Murray", "Isaac Westlund", "Guy Wuollet Jr"]
edition = "2018"

[dependencies]
rust-crypto = "^0.2"
rand = "^0.5"
queue = "0.3.1"
tokio = "0.2.21"
futures = "0.3.5"
tokio-ping = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
